--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 git+https://github.com/Rapptz/discord.py@7ad0075
 tabulate~=0.8.9
-motor~=3.0.0
+mongoengine~=0.24.1
 aiohttp~=3.8.1
 beautifulsoup4~=4.11.1
 diff-match-patch
