--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,28 +2,16 @@ version: '3'
 services:
   psybot:
     build: .
+    env_file:
+      - ./.env
     environment:
-      - "BOT_TOKEN=${BOT_TOKEN}"
-      - "GUILD_ID=${GUILD_ID}"
-      - "CTFTIME_TEAM=${CTFTIME_TEAM}"
       - "MONGODB_URI=mongo"
-      - "MONGODB_DB=${MONGODB_DB:-psybot}"
       - "BACKUPS_DIR=/home/psybot/backups"
-      - "ENFORCE_CATEGORIES=${ENFORCE_CATEGORIES}"
-      - "TEAM_ROLE=${TEAM_ROLE}"
-      - "ADMIN_ROLE=${ADMIN_ROLE}"
-      - "CTFS_CATEGORY=${CTFS_CATEGORY}"
-      - "INCOMPLETE_CATEGORY=${INCOMPLETE_CATEGORY}"
-      - "COMPLETE_CATEGORY=${COMPLETE_CATEGORY}"
-      - "ARCHIVE_CATEGORY=${ARCHIVE_CATEGORY}"
-      - "CTF_ARCHIVE_CATEGORY=${CTF_ARCHIVE_CATEGORY}"
-      - "EXPORT_CHANNEL=${EXPORT_CHANNEL}"
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./backups:/home/psybot/backups
     depends_on:
       - mongo
-    stop_signal: SIGKILL
   mongo:
     image: mongo
     restart: always
