--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 discord.py~=2.0.0
 tabulate~=0.8.9
 mongoengine~=0.24.1
-aiohttp~=3.8.1
+aiohttp~=3.8.3
 beautifulsoup4~=4.11.1
 diff-match-patch
-matplotlib
+matplotlib~=3.6.2
